--- a/style.css
+++ b/style.css
@@ -1,5 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, #41295a, #2F0743);
+}
+
+.calculator{
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 20px;
+    background: transparent;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+input{
+     width: 320px;
+     border: none;
+     padding: 24px;
+     margin: 10px;
+     background: black;
+     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+     border-radius: 10px;
+     font-size: 40px;
+     text-align: right;
+     cursor: pointer;
+     color: white;
+}
+
+input::placeholder{
+    color: white;
+}
+
+button{
+    border: none;
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+    border-radius: 30px;
+    color: white;
+    background: transparent;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.equabtn{
+    background-color: #020003;
+}
+
+.operator{
+    font-size: 22px;
 }
